<resources>
    <string name="app_name">Currency Exchange Rates</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_chart">Assessment</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- String for history -->
    <string name="currency_name">Currency Name</string>
    <string name="currency_target">Target</string>
    <string name="currency_rate">Rate</string>
    <string name="currency_base">Base Currency: %s</string>

    <!-- String for chart -->
    <string name="no_chart_data">No data for %1$s vs %2$s</string>

    <!-- Strings for menu -->
    <string name="action_history">History</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>

    <!-- Strings for list data -->
    <string name="empty_text">No data available</string>
    <string name="empty_loading">Loading&#8230;</string>

    <!-- Strings for toast message -->
    <string name="toast_no_data">No data available to save</string>
    <string name="toast_save_data">Data saved to database</string>
    <string name="toast_already_saved_data">Data already saved in database</string>
    <string name="toast_connection_error">No internet connection available</string>
    <string name="toast_update">Rates updated for %s</string>
    <string name="toast_no_update">No update available</string>
    <string name="toast_website_down">Website fixer.io is offline, try back later</string>

    <!-- Strings for dialogs -->
    <string name="message_clear_all">Are you sure you want clear all the currency information?</string>
    <string name="message_clear_currency">Are you sure you want to clear all data for %s?</string>

    <!-- Strings for preference screen -->
    <string name="default_base">USD</string>
    <string name="pref_base">pref_base</string>
    <string name="pref_currency_summary">Select Base Currency</string>
    <string name="pref_currency_title">Base Currency</string>

    <string name="default_frequency">Daily</string>
    <string name="pref_frequency">pref_freq</string>
    <string name="pref_freq_summary">Default update is daily around 4PM CET</string>
    <string name="pref_freq_title">Update Frequency</string>
    <string name="daily">Daily</string>
    <string name="off">Off</string>

    <string name="default_notification">On</string>
    <string name="pref_notification">pref_notification</string>
    <string name="pref_notif_summary">Notifications on or off</string>
    <string name="pref_notif_title">Notifications</string>

    <string name="pref_clear_title">Clear Database</string>
    <string name="pref_clear">pref_clear</string>
    <string name="pref_clear_summary">Clear currency data</string>

    <string-array name="frequency">
        <item>@string/daily</item>
        <item>@string/off</item>
    </string-array>

    <string-array name="currency_codes">
        <item>AUD</item>
        <item>RUB</item>
        <item>BRL</item>
        <item>BGN</item>
        <item>CAD</item>
        <item>HRK</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>INR</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MYR</item>
        <item>MXN</item>
        <item>NZD</item>
        <item>NOK</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>GBP</item>
        <item>RON</item>
        <item>SGD</item>
        <item>ZAR</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>CNY</item>
    </string-array>

    <string-array name="currency_names">
        <item>Australian Dollar</item>
        <item>Belarussian Ruble</item>
        <item>Brazilian Real</item>
        <item>Bulgarian Lev</item>
        <item>Canadian Dollar</item>
        <item>Croatian Kuna</item>
        <item>Czech Koruna</item>
        <item>Danish Krone</item>
        <item>Euro</item>
        <item>Hong Kong Dollar</item>
        <item>Hungarian Forint</item>
        <item>Indian Rupee</item>
        <item>Indonesian Rupiah</item>
        <item>Israeli New Shekel</item>
        <item>Japanese Yen</item>
        <item>Korean Won</item>
        <item>Malaysian Ringgit</item>
        <item>Mexican Nuevo Peso</item>
        <item>New Zealand Dollar</item>
        <item>Norwegian Krone</item>
        <item>Philippine Peso</item>
        <item>Polish Zloty</item>
        <item>Pound Sterling</item>
        <item>Romanian New Leu</item>
        <item>Singapore Dollar</item>
        <item>South African Rand</item>
        <item>Swedish Krona</item>
        <item>Swiss Franc</item>
        <item>Thai Baht</item>
        <item>Turkish Lira</item>
        <item>US Dollar</item>
        <item>Yuan Renminbi</item>
    </string-array>



</resources>
