<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_48dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="200"
        android:title="@string/action_history"
        android:icon="@drawable/ic_calendar_clock_white_48dp"
        app:showAsAction="ifRoom" />

</menu>